<resources>

    <string name="app_name">Asteroides</string>

    <string name="Asteroides"> Asteroides </string>
    <string name="Jugar"> Jugar </string>
    <string name="Configurar"> Configurar </string>
    <string name="AcercaDe"> Acerca De </string>
    <string name="Salir"> Salir </string>

    <bool name="limite"> true </bool>

    <string-array name="dias_semana">
        <item> lunes </item>
        <item> Martes </item>
        <item> Miercoles </item>
        <item> Jueves </item>
        <item> Viernes </item>
        <item> Sabado </item>
        <item> Domingo </item>
    </string-array>

</resources>