<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/Asteroides"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button2"
        style="@style/estilo_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_botones"
        android:background="@color/black"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif"
        android:padding="@dimen/margen_botones"
        android:text="@string/Configurar"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#171717"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen_botones"
        android:text="@string/AcercaDe" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen_botones"
        android:text="@string/Salir" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen_botones"
        android:text="@string/Jugar" />

</LinearLayout>